--- a/style.css
+++ b/style.css
@@ -14,9 +14,15 @@ body {
 
 }
 .main{
-    height: 100vh;
-    margin: 0 90px;
+    position: fixed;
+    top: 20px;
+    left: 80px;
+    bottom: 20px;
+    right: 20px;
+    border-radius: 0 10px 10px 0;
     padding: 300px;
+    position: fixed;
+    z-index: -1;
     background: #fff;
 }
 .main > h1 {
