--- a/style.css
+++ b/style.css
@@ -20,14 +20,13 @@ body {
     bottom: 20px;
     right: 20px;
     border-radius: 0 10px 10px 0;
-    padding: 300px;
+    padding: 20px 20px 20px 260px;
     position: fixed;
     z-index: -1;
     background: #fff;
 }
 .main > h1 {
    color: #198;
-   font-size: 60px;
    text-shadow: 1px 0px crimson, -1px 0 crimson, 0px 1px crimson, 0px -1px crimson ;
 }
 
@@ -43,6 +42,18 @@ body {
     background-color: #198;
     transition: .5s;
     overflow: hidden;
+}
+@media (max-width: 550px) {
+    .navigation{
+        width: 200px;
+    }
+    .main {
+        padding-top: 100px;
+        padding-left: 160px;
+    }
+    .main > h1 {
+        font-size: 15px;
+    }
 }
 .navigation.active {
     width: 70px;
